// Copyright 2018, Intel Corporation

syntax = "proto3";

package vertexai.tile.stripe.proto;

import "tile/proto/shape.proto";
import "google/protobuf/wrappers.proto";

message Affine {
  int64 offset = 1;
  map<string, int64> terms = 2;
}

message Block {
  string name = 1;
  string comments = 2;
  repeated Index idxs = 3;
  repeated Affine constraints = 4;
  repeated Refinement refs = 5;
  repeated Statement stmts = 6;
  Location location = 8;
}

message Index {
  string name = 1;
  uint64 range = 2;
  Affine affine = 3;
}

message Refinement {
  enum Dir {
    None = 0;
    In = 1;
    Out = 2;
    InOut = 3;
  }

  Dir dir = 1;
  string from = 2;
  string into = 3;
  repeated Affine access = 4;
  tile.proto.TensorShape shape = 5;
  string agg_op = 6;
  Location location = 7;
  bool is_const = 8;
  uint64 offset = 9;
  google.protobuf.UInt32Value bank_dim = 10;
}

message Statement {
  oneof op {
    Load load = 1;
    Store store = 2;
    Intrinsic intrinsic = 3;
    Constant constant = 4;
    Block block = 5;
    Special special = 6;
  }

  // Indices of intra-block dependencies.
  repeated uint32 deps = 7;
  repeated string tags = 8;
}

message Load {
  string from = 1;
  string into = 2;
}

message Store {
  string from = 1;
  string into = 2;
}

message Intrinsic {
  string name = 1;
  tile.proto.TensorShape.DataType type = 4;
  repeated string inputs = 2;
  repeated string outputs = 3;

  enum Std {
    MUL = 0;
    ADD = 1;
    EQ = 2;
    COND = 3;
    SUM = 4;
    MAX = 5;
    MIN = 6;
    PROD = 7;
    ASSIGN = 8;
  }
}

message Special {
  string name = 1;
  repeated string params = 2;
  repeated string inputs = 3;
  repeated string outputs = 4;

  enum Std {
    ZERO = 0;
    COPY = 1;
  }
}

message Constant {
  string name = 1;
  oneof value {
    int64 iconst = 2;
    double fconst = 3;
  }
}

message Location {
  string name = 1;
  Affine unit = 2;
}
